k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leoferolive-com-br
  namespace: leoferolive-com-br
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leoferolive-com-br
  template:
    metadata:
      labels:
        app: leoferolive-com-br
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: leoferolive-com-br
          image: ghcr.io/leoferolive/leoferolive-com-br:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
