k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leoferolive-com-br
  namespace: leoferolive-com-br
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: leoferolive.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leoferolive-com-br
                port:
                  number: 80
